pages and connection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-  
-    /* Remove the jumbotron's default bottom margin */ 
-     .jumbotron {
-      margin-bottom: 0;
-      /*background-image: url("/assets/gold.jpg");*/
-    }
-
-    body{
-      
-    }
-   
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: black;
-      padding: 25px;
-    }
-  </style>
-</head>
-<body>
-
 <div class="jumbotron">
   <div class="container text-center">
     <h1>BOX OFFICE</h1>      
@@ -36,96 +6,16 @@
 </div>
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-
- 
-  <!-- Toggler/collapsibe Button -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <!-- Navbar links -->
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item">
-         <a  class="nav-link" [routerLink]="['add']">HOME</a>
-       </li> 
-
-       <li class="nav-item">
-         <a  class="nav-link" [routerLink]="['list']">MOVIES</a><br>
-       </li> 
-
-       <li class="nav-item">
-         <a  class="nav-link" [routerLink]="['find']">CONTACT</a><br>
-       </li> 
+       <li class="nav-item"><a  class="nav-link" [routerLink]="['home']"><h6>MOVIES</h6></a></li> 
+       <li class="nav-item"><a  class="nav-link" [routerLink]="['signup']"><h6>SIGN UP</h6></a></li>
+      <li class="nav-item"><a  class="nav-link" [routerLink]="['login']"><h6> LOGIN</h6></a></li>
  </ul>
-
-    <ul class="navbar-nav navbar-right">
-      <li><a  class="nav-link" [routerLink]="['list']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a  class="nav-link" [routerLink]="['list']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
-  </div>
-  
-</nav>   
-
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">MOVIE1</div>
-        <div class="panel-body"><a [routerLink]="['add']"><img src="/assets/beauty.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-        <div class="panel-footer">DESCRIPTION</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-danger">
-        <div class="panel-heading">MOVIE 2</div>
-        <div class="panel-body"><a [routerLink]="['add']"><img src="/assets/devdas.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-        <div class="panel-footer">DESCRIPTION</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-success">
-        <div class="panel-heading">MOVIE 3</div>
-        <div class="panel-body"><a [routerLink]="['add']"><img src="/assets/joker.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-        <div class="panel-footer">DESCRIPTION (50% DISCOUNT)</div>
-      </div>
-    </div>
-  </div>
-</div><br>
-
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">MOVIE 5</div>
-        <div class="panel-body"><a [routerLink]="['add']"><img src="/assets/spider.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-        <div class="panel-footer">DESCRIPTION (SEASON SPECIAL)</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-primary">
-        <div class="panel-heading">MOVIE 6</div>
-        <div class="panel-body"><a [routerLink]="['add']"><img src="/assets/shrooms.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-        <div class="panel-footer">DESCRIPTION (NEW ARRIVAL)</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-primary">
-        <div class="panel-heading">MOVIE 7</div>
-        <div class="panel-body"><a [routerLink]="['add']"><img src="/assets/venom.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-        <div class="panel-footer">ABOUT TO CLOSE (DESCRIPTION)</div>
-      </div>
-    </div>
-  </div>
-</div><br><br>
-
+</nav>  
+<br>
+<router-outlet></router-outlet> 
 <footer class="container-fluid text-center"> 
-  <form class="form-inline">
-    <input type="email" class="form-control" size="50" placeholder="MOVIE NAME">&NonBreakingSpace;
-    <button type="button" class="btn btn-danger">SEARCH</button>
-  </form>
   <h6>@Online Copyright</h6> 
 </footer>
 
-</body>
-</html>
+
