--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
        <li class="nav-item"><a  class="nav-link" [routerLink]="['home']"><h6>MOVIES</h6></a></li> 
        <li class="nav-item"><a  class="nav-link" [routerLink]="['signup']"><h6>SIGN UP</h6></a></li>
       <li class="nav-item"><a  class="nav-link" [routerLink]="['login']"><h6> LOGIN</h6></a></li>
+      <li class="nav-item"><a  class="nav-link" [routerLink]="['bookingList']"><h6> BOOKING DETAILS</h6></a></li>
  </ul>
 </nav>  
 <br>
