--- a/src/app/loginadmin/loginadmin.component.html
+++ b/src/app/loginadmin/loginadmin.component.html
@@ -8,6 +8,6 @@
             </form>
         </div>
         <div class="image">
-            <img src="/assets/admin.jpeg">
+            <img src="/assets/go.gif">
         </div>
     </div>
