--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,2 +1,28 @@
-<p>payment works!</p>
-<a  class="nav-link" [routerLink]="['/ticket']"><h6>ticket</h6></a>
+<div class="container">
+    <div class="card" style="background-color: floralwhite; width: 500px;">
+        <div class="card-body">
+            <h6 style="color: darkblue; font-style: italic;">VISA</h6>
+<form (ngSubmit)="nextpage()" class="was-validated">
+
+    <div class="form-group">
+        <input type="text" placeholder="Card Holder Name" class="form-control" required>
+        <div class="valid-feedback">Valid.</div>
+        </div>
+    <div class="form-group">
+    <input type="number" placeholder="Card Number" class="form-control" required>
+    <div class="valid-feedback">Valid.</div>
+    </div>
+    <div class="form-group">
+    <input type="number" placeholder="CVV" class="form-control" required>
+    <div class="valid-feedback">Valid.</div>
+    </div>
+    <div class="form-group">
+    <input type="date" placeholder="Expiry Date" class="form-control" required>
+    <div class="valid-feedback">Valid.</div>
+</div>
+    <button type="submit" class="btn btn-dark">PAY</button>
+</form>
+</div>
+</div>
+</div>
+<hr>
