--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,23 +2,62 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="card">
-          <div class="card-heading">MOVIE1</div>
+          <div class="card-heading" style="text-align: center;"> MOVIE1</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/beauty.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer">DESCRIPTION</div>
+          <div class="card-footer"><table class="table table-bordered">
+            <th>
+              <tr>dir</tr>
+              <tr>prod</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </th>
+            <td>
+              <tr>director</tr>
+              <tr>producer</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </td>
+          </table></div>
         </div>
       </div>
       <div class="col-sm-4"> 
         <div class="card">
-          <div class="card-heading">MOVIE 2</div>
+          <div class="card-heading" style="text-align: center;"> MOVIE 2</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/devdas.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer">DESCRIPTION</div>
+          <div class="card-footer"><table class="table table-bordered">
+            <th>
+              <tr>dir</tr>
+              <tr>prod</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </th>
+            <td>
+              <tr>director</tr>
+              <tr>producer</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </td>
+          </table></div>
         </div>
       </div>
       <div class="col-sm-4"> 
         <div class="card">
-          <div class="card-heading">MOVIE 3</div>
+          <div class="card-heading" style="text-align: center;"> MOVIE 3</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/joker.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer">DESCRIPTION (50% DISCOUNT)</div>
+          <div class="card-footer"><table class="table table-bordered">
+            <th>
+              <tr>dir</tr>
+              <tr>prod</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </th>
+            <td>
+              <tr>director</tr>
+              <tr>producer</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </td>
+          </table></div>
         </div>
       </div>
     </div>
@@ -28,23 +67,62 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="card">
-          <div class="card-heading">MOVIE 5</div>
+          <div class="card-heading" style="text-align: center;">MOVIE 5</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/spider.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer">DESCRIPTION (SEASON SPECIAL)</div>
+          <div class="card-footer"><table class="table table-bordered">
+            <th>
+              <tr>dir</tr>
+              <tr>prod</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </th>
+            <td>
+              <tr>director</tr>
+              <tr>producer</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </td>
+          </table></div>
         </div>
       </div>
       <div class="col-sm-4"> 
         <div class="card">
-          <div class="card-heading">MOVIE 6</div>
+          <div class="card-heading" style="text-align: center;">MOVIE 6</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/shrooms.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer">DESCRIPTION (NEW ARRIVAL)</div>
+          <div class="card-footer"><table class="table table-bordered">
+            <th>
+              <tr>dir</tr>
+              <tr>prod</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </th>
+            <td>
+              <tr>director</tr>
+              <tr>producer</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </td>
+          </table></div>
         </div>
       </div>
       <div class="col-sm-4"> 
         <div class="card">
-          <div class="card-heading">MOVIE 7</div>
+          <div class="card-heading" style="text-align: center;">MOVIE 7</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/venom.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer">ABOUT TO CLOSE (DESCRIPTION)</div>
+          <div class="card-footer"><table class="table table-bordered">
+            <th>
+              <tr>dir</tr>
+              <tr>prod</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </th>
+            <td>
+              <tr>director</tr>
+              <tr>producer</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </td>
+          </table></div>
         </div>
       </div>
     </div>
