--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,20 @@
 .jumbotron {
     margin-bottom: 0;
-    /*background-image: url("/assets/gold.jpg");*/
+    background-image: url("/assets/4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   footer {
     background-color: rgb(48, 48, 51);
     padding: 25px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: floralwhite;
+    color: floralwhite; 
+    opacity: 1;
+  }
+
+  .body{
+    background-image: url("/assets/6.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
