--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,23 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <div class="jumbotron">
-  <div class="container text-center">
+  <div class="container text-center" style="color: rgb(226, 187, 12);">
     <h1>BOX OFFICE</h1>      
-    <p>The Ultimte Movie Booking Application</p>
+    <p>The Movie Booking Application</p>
   </div>
 </div>
-
+<div class="body">
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <ul class="navbar-nav">
        <li class="nav-item"><a  class="nav-link" [routerLink]="['home']"><h6>MOVIES</h6></a></li> 
        <li class="nav-item"><a  class="nav-link" [routerLink]="['signup']"><h6>SIGN UP</h6></a></li>
       <li class="nav-item"><a  class="nav-link" [routerLink]="['login']"><h6> LOGIN</h6></a></li>
       <li class="nav-item"><a  class="nav-link" [routerLink]="['bookingList']"><h6> BOOKING DETAILS</h6></a></li>
+      <a  class="nav-link" [routerLink]="['/admin']" style="color: black;"><i class="fas fa-cog"></i></a>
  </ul>
 </nav>  
 <br>
 <router-outlet></router-outlet> 
+</div>
 <footer class="container-fluid text-center"> 
   <h6>@Online Copyright</h6> 
 </footer>
