--- a/src/app/newuser/newuser.component.html
+++ b/src/app/newuser/newuser.component.html
@@ -1,8 +1,7 @@
-<p>newuser works!</p>
-<a  class="nav-link" [routerLink]="['/login']"><h6>MOVIES</h6></a>
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <div class="container">
     <div class="myform">
+        <a  class="nav-link" [routerLink]="['/home']" style="color: black;"><i class="fas fa-home"></i></a>
         <form (ngSubmit)="transmit()">
             <h2>USER REGISTRATION</h2>
             <input type="text" placeholder="Email Id" >
