--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container">    
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-4" *ngFor="let i of x">
         <div class="card">
-          <div class="card-heading" style="text-align: center;"> MOVIE1</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/beauty.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
+          <div class="card-heading" style="text-align: center;"> MOVIE {{i}}</div>
+          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/{{i+2}}.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
           <div class="card-footer"><table class="table table-bordered">
             <th>
               <tr>dir</tr>
@@ -20,7 +20,9 @@
           </table></div>
         </div>
       </div>
-      <div class="col-sm-4"> 
+    </div>
+  </div>
+     <!-- <div class="col-sm-4" style="margin: 10px 10px 10px 10px;"> 
         <div class="card">
           <div class="card-heading" style="text-align: center;"> MOVIE 2</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/devdas.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
@@ -40,7 +42,7 @@
           </table></div>
         </div>
       </div>
-      <div class="col-sm-4"> 
+      <div class="col-sm-4" style="margin: 10px 10px 10px 10px;"> 
         <div class="card">
           <div class="card-heading" style="text-align: center;"> MOVIE 3</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/joker.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
@@ -60,10 +62,30 @@
           </table></div>
         </div>
       </div>
-    </div>
-  </div><br>
+
+      <div class="col-sm-4" style="margin: 10px 10px 10px 10px;"> 
+        <div class="card">
+          <div class="card-heading" style="text-align: center;"> MOVIE 4</div>
+          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/spider.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
+          <div class="card-footer"><table class="table table-bordered">
+            <th>
+              <tr>dir</tr>
+              <tr>prod</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </th>
+            <td>
+              <tr>director</tr>
+              <tr>producer</tr>
+              <tr>writer</tr>
+              <tr>cast</tr>
+            </td>
+          </table></div>
+        </div>
+      </div>-->
+    
   
-  <div class="container">    
+ <!-- <div class="container">    
     <div class="row">
       <div class="col-sm-4">
         <div class="card">
@@ -126,4 +148,4 @@
         </div>
       </div>
     </div>
-  </div><br><br>
+  </div><br>-->
