--- a/src/app/pagerefund/pagerefund.component.html
+++ b/src/app/pagerefund/pagerefund.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-bottom: 20px;">
     <div class="card">
         <div class="card-body" style=" align-content: center;">
-    <h1 style="font-family: 'Times New Roman', Times, serif; text-align: center;">PAYMENT REFUNDED INTO TOUR ACCOUNT SOON</h1>
+    <h1 style="font-family: 'Times New Roman', Times, serif; text-align: center;">PAYMENT REFUNDED INTO YOUR ACCOUNT</h1>
     <h1 style="font-family: 'Times New Roman', Times, serif; text-align: center;">YOUR BOOKING IS CANCELLED</h1>
     <img src="/assets/angry.gif" style="animation-fill-mode: both; margin-left: 350px;">
     <a  class="nav-link" [routerLink]="['home']" style="color: lightslategrey; text-align: center;"><h6>HOME<br><div class="spinner-grow text-secondary" style="text-align: center;"></div></h6></a>
