--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,2 +1,18 @@
-<p>ticket works!</p>
-<a  class="nav-link" [routerLink]="['home']"><h6>MOVIES</h6></a>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<div class="container">
+    <div class="card">
+        <div class="card-header"></div>
+        <div class="card-body">
+            <hr>
+                <h1>CINEMA</h1>
+                <h1>TICKET <i class="fas fa-video" style="color: seashell;"></i></h1>
+                
+                <img src="/assets/girlcorn.gif" class="img-responsive" style="width:35%;right: 20px;position: absolute; top: 70px;" alt="Image">
+                <h4>DATE : TIME</h4>
+                <h4>SEAT NO : X / Y / Z / A</h4>
+            <hr>
+        </div>
+        <div class="card-footer">booking id</div>
+    </div>
+
+</div>
