--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-sm-4" *ngFor="let i of x">
         <div class="card">
-          <div class="card-heading" style="text-align: center;"> MOVIE {{i}}</div>
+          <div class="card-header" style="text-align: center;"> MOVIE {{i}}</div>
           <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/{{i+2}}.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
           <div class="card-footer"><table class="table table-bordered">
             <th>
