--- a/src/app/listmovie/listmovie.component.html
+++ b/src/app/listmovie/listmovie.component.html
@@ -1,1 +1,78 @@
-<p>listmovie works!</p>
+<div class="container">
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 20px;">All</button>&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 75px;">Sort by date</button>&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;">Add show</button>&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 310px;">Add movie</button>&NonBreakingSpace;
+    <form >
+        <input type="number" placeholder=" movie name">&NonBreakingSpace;&NonBreakingSpace;
+        <button type="submit" class="btn btn-dark">Searh</button><br><br>
+    </form>
+    <div class="row" *ngFor="let i of x" style="display: contents;">
+        <div class="col">
+            
+            <div class="card">
+                <div class="card-header"> </div>
+                <div class="card-body">
+
+                    <table class="table table-bordered">
+                        <tr>
+                          <th>movie id</th>
+                          <th>movie name</th>
+                          <th>movie type</th>
+                          <th>language</th>
+                          <th>director</th>
+                          <th>cast</th>
+                          <th>producer</th>
+                          <th>show time and show date</th>
+                        </tr>
+                        <tr>
+                            <td>movie id</td>
+                            <td>movie name</td>
+                            <td>movie type</td>
+                            <td>language</td>
+                            <td>director</td>
+                            <td>actor,actress</td>
+                            <td>producer</td>
+                            <td>
+                            <table class="table table-bordered">
+                                <tr>
+                                    <th>date</th>
+                                    <th>time</th>
+                                    <th>status</th>
+                                </tr>
+                                <tr   *ngFor="let j of y">
+                                    <td><ul class="list-group" style="list-style-type:none;">
+                                        <li>date{{j}}</li>
+                                    </ul></td>
+
+                                    <td>
+                                        <ul class="list-group" style="list-style-type:none;" *ngFor="let k of z">
+                                            <li>time</li>
+                                        </ul>
+                                    </td>
+                                    <td>
+                                        <ul class="list-group" style="list-style-type:none;" *ngFor="let k of z">
+                                            <li>status</li>
+                                        </ul>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-danger">delete</button>
+                                    </td>
+                                </tr>
+                            </table>
+                            </td>
+
+                            <td>
+                                <button class="btn btn-danger">delete</button><hr>
+                                <button class="btn btn-info">update</button>
+                            </td>
+                        </tr>
+                      </table>
+
+                </div>
+                <div class="card-footer"></div>
+            </div><hr>
+
+        </div>
+      </div>
+</div>
