--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,5 @@
 
   .body{
     background-image: url("/assets/6.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
   }
