--- a/src/app/listmovie/listmovie.component.html
+++ b/src/app/listmovie/listmovie.component.html
@@ -2,7 +2,7 @@
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 20px;">All</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 75px;">Sort by date</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;">Add show</button>&NonBreakingSpace;
-    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 310px;">Add movie</button>&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 310px;" (click)="transmit()">Add movie</button>&NonBreakingSpace;
     <form >
         <input type="number" placeholder=" movie name">&NonBreakingSpace;&NonBreakingSpace;
         <button type="submit" class="btn btn-dark">Searh</button><br><br>
