--- a/src/app/listmovie/listmovie.component.html
+++ b/src/app/listmovie/listmovie.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 20px;">All</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 75px;">Sort by date</button>&NonBreakingSpace;
-    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;">Add show</button>&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;" (click)="transmit()">Add show</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 310px;" (click)="transmit()">Add movie</button>&NonBreakingSpace;
     <form >
         <input type="number" placeholder=" movie name">&NonBreakingSpace;&NonBreakingSpace;
