--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -10,6 +10,7 @@
                 <img src="/assets/girlcorn.gif" class="img-responsive" style="width:35%;right: 20px;position: absolute; top: 70px;" alt="Image">
                 <h4>DATE : TIME</h4>
                 <h4>SEAT NO : X / Y / Z / A</h4>
+                <h4>SCREEN : 1</h4>
             <hr>
         </div>
         <div class="card-footer">booking id</div>
