--- a/src/app/bookticket/bookticket.component.html
+++ b/src/app/bookticket/bookticket.component.html
@@ -1,2 +1,59 @@
-<a  class="nav-link" [routerLink]="['/payment']"><h6>Payment</h6></a>
-<a  class="nav-link" [routerLink]="['/home']"><h6>MOVIES</h6></a>
+<div class="container" style="padding: 10px;">
+    <div class="card">
+        <div class="card-header"><h4>BOOKING SUMMARY</h4></div>
+
+        <div class="card-body">     
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-header"><h6>PERSONAL DETAILS</h6></div>
+                        <div class="card-body">
+                    <table class="table table-bordered">
+                        <tr>
+                            <th>name</th>
+                            <th>email id</th>
+                            <th>mobile no</th>
+                        </tr>
+                        <tr>
+                            <td>name</td>
+                            <td>email</td>
+                            <td>xxxxxxxxxx</td>
+                        </tr>
+                    </table>
+                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-header"><h6>MOVIE DETAILS</h6></div>
+                        <div class="card-body">
+                    <table class="table table-bordered">
+                        <tr>
+                            <th>movie name</th>
+                            <th>language</th>
+                            <th>show date</th>
+                            <th>show time</th>
+                            <th>screen</th>
+                        </tr>
+                        <tr>
+                            <td>movie name</td>
+                            <td>language</td>
+                            <td>show date</td>
+                            <td>show time</td>
+                            <td>screen</td>
+                        </tr>
+                    </table>
+                    </div>
+                    </div>
+                </div>
+            </div><hr>
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                   <div class="card-header"> <h6>SEAT NO.s : A/B/C/Q/R</h6>
+                    <button class="btn btn-info" (click)="transmit()" >confirm and pay</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
