--- a/src/app/listmovie/listmovie.component.html
+++ b/src/app/listmovie/listmovie.component.html
@@ -3,8 +3,8 @@
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 75px;">Sort by date</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;" (click)="transmit()">Add show</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 310px;" (click)="transmit()">Add movie</button>&NonBreakingSpace;
-    <form >
-        <input type="number" placeholder=" movie name">&NonBreakingSpace;&NonBreakingSpace;
+    <form>
+        <input type="text" placeholder=" movie name">&NonBreakingSpace;&NonBreakingSpace;
         <button type="submit" class="btn btn-dark">Searh</button><br><br>
     </form>
     <div class="row" *ngFor="let i of x" style="display: contents;">
